# FastApi---Example

./: main.py  pyproject.toml
test/: main.py
